--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  better_player: ^0.0.84
+  video_player: ^2.5.1
+  chewie: ^1.6.4
   file_picker: ^5.2.5
   permission_handler: ^10.4.0
   path: ^1.8.2
+
 
 dev_dependencies:
   flutter_test:
